# betula-index

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: bench.rs  bridge_clustering.py
python/lexindex/: __init__.py  __init__.pyi
src/: lib.rs  perfect_hash.rs  python.rs  string_index.rs
tests/: integration.rs  test_python.py
