[package]
name = "betula-index"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Compact, immutable string↔id indexes for huge catalogs: ordered FST lookup with prefix/range queries, plus a minimal-perfect-hash dictionary."
authors = ["Ilia Gradina <ilia.gradina@gmail.com>"]
repository = "https://github.com/ilgrad/betula-index"
readme = "README.md"
keywords = ["index", "fst", "perfect-hash", "prefix", "catalog"]
categories = ["data-structures", "text-processing"]

[dependencies]
# `levenshtein` adds the bounded edit-distance automaton (tiny `utf8-ranges` dep) for fuzzy search.
fst = { version = "0.4", features = ["levenshtein"] }
ptr_hash = { version = "1.1", optional = true }
# epserde serialises the ptr_hash MPH for `PerfectHashIndex` persistence (already in the ptr_hash tree).
epserde = { version = "0.8", optional = true }

[features]
default = ["mph"]
# Minimal-perfect-hash dictionary (`PerfectHashIndex`), backed by the `ptr_hash` crate, with
# epserde-based persistence (`save`/`load`).
mph = ["dep:ptr_hash", "dep:epserde"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
